# AutoAntibiotic

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGES.md  Dockerfile  Dockerfile.gpu  README.md  SCIENCE.md  config.yaml  curated_allosteric.csv  discovery_pipeline.py  example_usage.ipynb  expanded_seed.csv  novel_seed.csv  paper.tex  pyproject.toml  references.bib  requirements.txt  run_log.txt  setup.sh  test_pipeline.py
.github/workflows/: ci.yml
autoantibiotic/: __init__.py  active_learning.py  analysis.py  config.py  data_loaders.py  docking.py  docking_legacy.py  fep_engine.py  fep_manager.py  generative_design.py  io_utils.py  library_gen.py  main.py  md_validation.py  ml_scoring.py  models.py  orchestrator.py  pipeline_context.py  reporting.py  scoring_metrics.py  structure_prep.py  synthesis_planner.py  water_analysis.py
autoantibiotic/admet/: __init__.py  predictors.py
autoantibiotic/docking/: __init__.py  base.py  compound.py  engines.py  pipeline.py
autoantibiotic/ml_scoring/: __init__.py  gnn_scorer.py  meta_scorer.py  scoring.py
autoantibiotic/phases/: __init__.py  analysis.py  base.py  docking.py  library_generation.py  reporting.py
autoantibiotic/utils/: brics_utils.py
benchmarks/: __init__.py  reference_data.py  run_enrichment_test.py  run_vina_benchmark.py
config/: constants.py  loader.py  targets.yaml
data/: active_site_actives.csv  admet_reference_curated.csv  combined_library.csv  cyp_data.csv  diverse_pbp2a_library.csv  herg_data.csv  known_actives.csv  pbp2a_actives.csv  pbp2a_allosteric_library.csv  pbp2a_focused_seed.csv  pbp2a_inactives.csv  screen_library.csv  screen_library_final.csv  screen_library_v2.csv  screen_library_v3.csv
docs/: QUICKSTART.md
examples/: known_ligands.csv  single_compound_api.py
scripts/: build_decoys.py  build_diverse_library.py  build_expanded_seed.py  build_final_library.py  build_library.py  control_sanity_check.py  enrichment_validation.py  redock_rmsd_quick.py  run_redocking_3zg0.py  validate_active_site.py
tests/: conftest.py  helpers.py  test_active_learning.py  test_admet.py  test_benchmarks.py  test_binary_manager.py  test_centroids.py  test_cli_validation.py  test_config.py  test_config_validation.py  test_docking.py  test_docking_engines.py  test_fep.py  test_fep_errors.py  test_fep_expanded.py  test_fep_integration.py  test_fep_prescreening.py  test_filters.py  test_fragment_growth.py  test_generative.py  test_gnn_scorer.py  test_interactions.py  test_meta_scorer.py  test_mmgbsa.py  test_orchestrator.py  test_pharmacophore.py  test_pipeline_context.py  test_pipeline_integration.py  test_pose_filtering.py  test_receptor_validation.py  test_resistance_mutation.py  test_structure_prep.py  test_synthesis.py  test_water.py
utils/: docking.py  filtering.py  library_gen.py  ligand_prep.py  reporting.py  structure_prep.py
