[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "autoantibiotic"
version = "4.0.0"
description = "MRSA PBP2a Inhibitor Screening Pipeline"
requires-python = ">=3.9"
dependencies = [
    "rdkit-pypi>=2023.9.6",
    "biopython>=1.83",
    "pandas>=2.1.5",
    "numpy>=1.26.2",
    "matplotlib>=3.8.3",
    "meeko>=0.5.0",
    "tqdm>=4.66.2",
    "sascore>=1.0.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
fep = [
    "openmm>=8.0.0",
    "openmmtools>=1.0.0",
    "pdbfixer>=1.9",
    "openmmforcefields>=0.9.0",
]
generative = [
    "torch>=2.0.0",
]
explainability = [
    "shap>=0.46.0",
]
gnn = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
]
all = [
    "autoantibiotic[fep]",
    "autoantibiotic[generative]",
    "autoantibiotic[gnn]",
    "autoantibiotic[explainability]",
]

[tool.setuptools.packages.find]
include = ["autoantibiotic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
